compiler/tests/fail/typing/export_stack_res.jazz
export
fn bad() -> stack u64 {
  stack u64 x;
  x = 0;
  return x;
}
